fixing the hard-coded css

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,8 +1,8 @@
 @import "~bulma/sass/utilities/initial-variables"
 
 // Config vars
-// Kaldi logo brand color: #FD461E
-$kaldi-red: #005dd6
+// Kaldi logo brand color: #0007d6
+$kaldi-red: #0007d6
 $kaldi-red-invert: #fff
 
 $primary: $kaldi-red
@@ -46,7 +46,8 @@ $black: #2b2523
   width: 100vw
   height: 400px
   background-size: cover
-  background-position: bottom
+  background-position: center
+  background-attachment: fixed
   display: flex
   justify-content: center
   align-items: center
@@ -61,10 +62,10 @@ $black: #2b2523
   border-radius: .25rem
   text-decoration: none
   font-weight: 700
-  color: #CC3700
+  color: #0007d6
   text-align: center
-  -webkit-box-shadow: inset 0 0 0 2px #CC3700
-  box-shadow: inset 0 0 0 2px #f40
+  -webkit-box-shadow: inset 0 0 0 2px #0007d6
+  box-shadow: inset 0 0 0 2px #0007d6
   -webkit-transition: all .15s ease
   transition: all .15s ease
 
