--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -2,11 +2,11 @@
 
 // Config vars
 // Kaldi logo brand color: #0007d6
-$kaldi-red: #0007d6
-$kaldi-red-invert: #fff
+$sojourn-blue: #0007d6
+$white-contrast: #fff
 
-$primary: $kaldi-red
-$primary-invert: $kaldi-red-invert
+$primary: $sojourn-blue
+$primary-invert: $white-contrast
 $body-color: #333
 $black: #2b2523
 
@@ -52,20 +52,29 @@ $black: #2b2523
   justify-content: center
   align-items: center
 
+.full-width-title
+  width: 100%
+  height: 15em
+  background-color: $primary
+  color: $primary-invert
+  display: flex
+  justify-content: center
+  align-items: center
+
 .btn
   display: inline-block
   padding: 12px 16px 10px
   font-size: 18px
   font-size: 1rem
   line-height: 1.25
-  background-color: #fff
+  background-color: $primary-invert
   border-radius: .25rem
   text-decoration: none
   font-weight: 700
-  color: #0007d6
+  color: $primary
   text-align: center
-  -webkit-box-shadow: inset 0 0 0 2px #0007d6
-  box-shadow: inset 0 0 0 2px #0007d6
+  -webkit-box-shadow: inset 0 0 0 2px $primary
+  box-shadow: inset 0 0 0 2px $primary
   -webkit-transition: all .15s ease
   transition: all .15s ease
 
@@ -79,9 +88,9 @@ $black: #2b2523
 
 .title-overlay-text
   font-weight: bold
-  background-color: #0007d6
-  opacity: 0.7
-  color: #fff !important
+  background-color: $primary
+  opacity: 0.85
+  color: $primary-invert !important
   padding: 0.3em 0.5em
   text-align: center
 
@@ -96,7 +105,7 @@ $black: #2b2523
   height: 1.5rem
   fill: currentColor
 .navbar-brand .navbar-item .logo
-  color: #fff
+  color: $primary-invert
 footer.footer
   padding: 3rem 0rem 0rem
   background-color: transparent
@@ -105,9 +114,9 @@ footer.footer
 $menu-item-color: $white-ter
 $menu-item-hover-color: $black !important
 $menu-item-hover-background-color: $black
-$menu-item-active-color: $kaldi-red-invert
-$menu-item-active-background-color: 	$kaldi-red-invert
-$menu-list-border-left: 1px solid $kaldi-red-invert
+$menu-item-active-color: $white-contrast
+$menu-item-active-background-color: 	$white-contrast
+$menu-list-border-left: 1px solid $white-contrast
 $menu-label-color: $white-ter
 
 .menu-label
