small tweaks and fixed mobile width bug

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -61,6 +61,9 @@ $black: #2b2523
   justify-content: center
   align-items: center
 
+.whitetext
+  color: $primary-invert !important
+
 .btn
   display: inline-block
   padding: 12px 16px 10px
@@ -131,11 +134,9 @@ $menu-label-color: $white-ter
   padding: .5em .5em .3em .5em
   border-radius: 1em
   background-color: $white-ter
-  margin: .5em
   width: 1em
   height: 1em
   vertical-align: middle
-  display: inline
 
 // blog roll
 .blog-list-item.is-featured
